# cmf-backtesting-engine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md
apps/: backtest.cpp  convert_csv.cpp
configs/: as.json  as_online.json  default.json  fixed.json  microprice_as.json  microprice_as_online.json  sample.json
docs/: ARCHITECTURE.md  DESCRIPTION_RU.md  STRATEGY.md  task.md
include/bt/: book.hpp  core.hpp  engine.hpp  exec.hpp  metrics.hpp  strategy.hpp
include/bt/book/: order_book.hpp
include/bt/core/: event.hpp  order.hpp  types.hpp
include/bt/data/: binary_record.hpp  csv_convert.hpp  event_source.hpp  feed_merger.hpp  lob_source.hpp  mmap_file.hpp  trades_source.hpp
include/bt/engine/: backtest_engine.hpp  config.hpp
include/bt/exec/: execution_simulator.hpp  latency_model.hpp  order.hpp  queue_model.hpp
include/bt/metrics/: metrics.hpp  metrics_fanout.hpp  pnl_tracker.hpp  risk_metrics.hpp  time_series_recorder.hpp
include/bt/strategy/: avellaneda_stoikov.hpp  avellaneda_stoikov_online.hpp  calibration.hpp  fixed_spread_quoter.hpp  microprice.hpp  microprice_as.hpp  microprice_as_online.hpp  online_estimators.hpp  order_api.hpp  strategy.hpp
market_data/: lob_sample.csv  trades_sample.csv
reports/: as.csv  as_online.csv  fixed.csv  gamma_sweep.csv  microprice_as.csv  microprice_as_online.csv
scripts/: gamma_sweep.sh
src/bt/data/: csv_convert.cpp  feed_merger.cpp  lob_source.cpp  trades_source.cpp
src/bt/engine/: backtest_engine.cpp  config.cpp
src/bt/exec/: execution_simulator.cpp
src/bt/metrics/: pnl_tracker.cpp  risk_metrics.cpp  time_series_recorder.cpp
src/bt/strategy/: avellaneda_stoikov.cpp  avellaneda_stoikov_online.cpp  fixed_spread_quoter.cpp  microprice.cpp
tests/: test_avellaneda.cpp  test_book.cpp  test_core.cpp  test_data.cpp  test_engine.cpp  test_exec.cpp  test_metrics.cpp  test_strategy.cpp
viz/: README.md  pyproject.toml
viz/bt_viz/: __init__.py  cli.py  plot.py
